Padronização de erros da api rest inglês e português. configuração de segurança para proteção de csrf.